<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="hello">Hello World, Asteroides! </string>
    <string name="app_name">Asteroides</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="no_hay_puntuaciones">No hay puntuaciones</string>
    <string name="otro_texto">Otro Texto</string>
    <string name="image_content_description">Descripción del contenido</string>
    <string name="juego">Juego</string>
    <string name="Socorro">Socorro!!</string>

</resources>