<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    android:background="@drawable/degradado"
    tools:context=".Asteroides" >

    <TextView
        style="@style/TextoAsteroides"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textSize="25sp " />

    <Button
        android:id="@+id/Button01"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar" 
        android:onClick="lanzarJuego"/>

    <Button
        android:id="@+id/Button02"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/Button03"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/Button04"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntuaciones" />

    <Button
        android:id="@+id/Button05"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Socorro" />

</LinearLayout>